<resources>
    <string name="app_name">Food Planner</string>

    //login page
    <string name="app_name1">Food</string>
    <string name="app_name2">Planner</string>
    <string name="skip">Skip</string>
    <string name="login">LogIn</string>
    <string name="orSignup">Create an account?</string>
    <string name="noSignup">SignUp With</string>
    <string name="client_id">928135764928-9d9bthuhikrl0fjedqgthhcsnqpicou8.apps.googleusercontent.com</string>


    //Sign up page
    <string name="signup">Create</string>
    <string name="signupTitle1">Create Account</string>
    <string name="signupTitle2">Let\'s Get Started!</string>
    <string name="orLogin">Already have an account?</string>

    //data field
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>

    //Menu
    <string name="menu_item1">Home</string>
    <string name="menu_item2">Search</string>
    <string name="menu_item3">Favourite</string>
    <string name="menu_item4">Calendar</string>
    <string name="menu_item5">Profile</string>

    // page Titles
    <string name="random">Daily Inspiration</string>
    <string name="category">Popular Categories</string>
    <string name="area">Countries</string>

    //button
    <string name="add">Add</string>
    <string name="country">Country : </string>
    <string name="vid">Video</string>
    <string name="ingr">Ingredients</string>
    <string name="step">Instructions</string>

    //sign in Dialog
    <string name="signupfirst_title">Sign Up For More Features</string>
    <string name="signupfirst_favDec">You can add meals to your favorites or remove from it.</string>
    <string name="signupfirst_calDec">You can show and add meals of your current week</string>
    <string name="signupfirst_profileDec">You can get more features and options after getting an account</string>
    <string name="signupfirst_accept">Sign Up</string>
    <string name="signupfirst_decline">Cancel</string>

    //profile Dialog
    <string name="profile_Dec1">Are you sure you want to</string>
    <string name="profile_accept">Sure</string>
    <string name="profile_decline">Cancel</string>

    //network Dialog
    <string name="network_title">No Network Connection</string>
    <string name="network_Dec">Please make sure you are connected to a WiFi network</string>
    <string name="network_decline">Cancel</string>

    //search
    <string name="search1">Category</string>
    <string name="search2">Ingredient</string>
    <string name="search3">Country</string>

    //profile page
    <string name="profile_option1">  Delete All Favourites</string>
    <string name="profile_option2">  Delete All Week Plans</string>
    <string name="profile_option3">  Backup your data</string>
    <string name="profile_option4">  Retrieve your old data</string>
    <string name="profile_option5">  Save meals for offline</string>
    <string name="profile_option6">  Log Out</string>

</resources>