<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_item1"
        android:enabled="true"        />
    <item
        android:id="@+id/searchPageFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_item2"
        android:enabled="true"
        />
    <item
        android:id="@+id/favFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_item3"
        android:enabled="true"        />
    <item
        android:id="@+id/weekFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/menu_item4"
        android:enabled="true"        />
    <item
        android:id="@+id/profilePageFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_item5"
        android:enabled="true"        />
</menu>