<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/color_bg1" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:shadowColor="@color/blue"
        android:shadowRadius="5"
        android:text="@string/signupTitle1"
        android:textColor="@color/darkBlue"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textDesign1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="50dp"
        android:shadowColor="@color/blue"
        android:shadowRadius="5"
        android:text="@string/signupTitle2"
        android:textColor="@color/darkBlue"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textDesign1"
        app:layout_constraintStart_toStartOf="@id/title1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDesign1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_radius"
        android:backgroundTint="@color/lightBlue"
        app:startIconDrawable="@drawable/ic_person"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/textDesign2"
        app:layout_constraintEnd_toEndOf="@+id/textDesign2"
        app:layout_constraintStart_toStartOf="@+id/textDesign2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDesign2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_radius"
        android:backgroundTint="@color/lightBlue"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/textDesign3"
        app:layout_constraintEnd_toEndOf="@+id/textDesign3"
        app:layout_constraintStart_toStartOf="@+id/textDesign3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDesign3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_radius"
        android:backgroundTint="@color/lightBlue"
        app:startIconDrawable="@drawable/ic_privacy"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/textDesign4"
        app:layout_constraintEnd_toEndOf="@+id/textDesign4"
        app:layout_constraintStart_toStartOf="@+id/textDesign4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDesign4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_radius"
        android:backgroundTint="@color/lightBlue"
        app:startIconDrawable="@drawable/ic_privacy"
        android:hint="@string/confirmPassword"
        app:layout_constraintBottom_toTopOf="@+id/signupBtn"
        app:layout_constraintEnd_toEndOf="@+id/signupBtn"
        app:layout_constraintStart_toStartOf="@+id/signupBtn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_radius"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/signupBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/Orange"
        android:text="@string/signup"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn" />

    <Button
        android:id="@+id/loginBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/orLogin"
        android:textColor="@color/darkBlue"
        android:shadowColor="@color/blue"
        android:shadowRadius="5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>