<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.LoginActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/bg_image1"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <Button
        android:id="@+id/skipBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="105dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:alpha="0.6"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/app_name1"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="80sp"
        android:textStyle="bold"
        android:shadowRadius="50"
        android:shadowColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textDesign1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name2"
        android:textColor="@color/lightRose"
        android:textSize="40sp"
        android:shadowRadius="50"
        android:shadowColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/title1"
        app:layout_constraintStart_toEndOf="@+id/title1"
        app:layout_constraintTop_toTopOf="@+id/title1"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDesign1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.9"
        android:background="@drawable/style_radius"
        android:backgroundTint="@color/white"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/email"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textDesign2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_radius"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDesign2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:alpha="0.9"
        android:background="@drawable/style_radius"
        android:backgroundTint="@color/white"
        app:startIconDrawable="@drawable/ic_privacy"
        android:hint="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/textDesign1"
        app:layout_constraintStart_toStartOf="@+id/textDesign1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_radius"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/Orange"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signupBtn"
        app:layout_constraintEnd_toEndOf="@+id/textDesign2"
        app:layout_constraintStart_toStartOf="@+id/textDesign2" />

    <Button
        android:id="@+id/signupBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/orSignup"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textDesign3"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn" />

    <View
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:background="@color/lightRose"
        app:layout_constraintBottom_toTopOf="@+id/googleBtn"
        app:layout_constraintEnd_toStartOf="@+id/textDesign3"
        app:layout_constraintStart_toStartOf="@+id/googleBtn" />

    <TextView
        android:id="@+id/textDesign3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:text="@string/noSignup"
        android:textColor="@color/lightRose"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/line1"
        app:layout_constraintBottom_toBottomOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/line2"
        app:layout_constraintStart_toEndOf= "@+id/line1"/>


    <View
        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/lightRose"
        app:layout_constraintBottom_toBottomOf="@+id/textDesign3"
        app:layout_constraintEnd_toEndOf="@id/facebookBtn"
        app:layout_constraintStart_toEndOf="@id/textDesign3"
        app:layout_constraintTop_toTopOf="@+id/textDesign3" />

    <Button
        android:id="@+id/googleBtn"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/log_google"
        android:gravity="center|left"
        android:text="Google"
        android:textColor="@color/Orange"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/facebookBtn"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/log_facebook"
        android:gravity="center"
        android:text="FaceBook"
        android:textColor="@color/darkBlue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/googleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/googleBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>