<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.HomePageFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/random"
                android:textColor="@color/black"
                android:shadowColor="@color/Orange"
                android:shadowRadius="4"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mealRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin ="1dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/black"
                android:shadowColor="@color/Orange"
                android:shadowRadius="4"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categoryRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin ="1dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textColor="@color/black"
                android:shadowColor="@color/Orange"
                android:shadowRadius="4"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/areaRecycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin ="1dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>